BPL+BPBr: Add coins system, /fly cmd (#26)
* BridgePracticeLobby: Add coins system

* Apply suggestions from code review

* Fixed SQL vulnerabilities + typos

* Fixed clients crashing due to rank display

* Fix formatting

* Fix rank display

* Fix SQL mis-matches

* Give coins on wins/loss (50 for loss, 150 for win)

* Add fly command

* Register fly command

* Add fly command (plugin.yml)

* Update BridgePracticeLobby/src/main/java/net/bridgepractice/BridgePracticeLobby/CoinCommands.java

* Update BridgePracticeLobby/src/main/java/net/bridgepractice/BridgePracticeLobby/CoinCommands.java

* Update BridgePracticeLobby/src/main/java/net/bridgepractice/BridgePracticeLobby/CoinCommands.java

* Update BridgePracticeLobby/src/main/java/net/bridgepractice/BridgePracticeLobby/CoinCommands.java

* Fozzie's nitpick fixes

Co-authored-by: UltimatePro-Grammer <63370104+UltimatePro-Grammer@users.noreply.github.com>

Co-authored-by: BuildTools <unconfigured@null.spigotmc.org>
Co-authored-by: UltimatePro-Grammer <63370104+UltimatePro-Grammer@users.noreply.github.com>

--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -37,3 +37,12 @@ commands:
     description: Get a pearl that you can ride 
     permission: group.legend
     permission-message: §cYou must have legend rank or higher to use this command!
+  coins:
+    description: Staff only command
+    permission: group.mod
+    permission-message: §cYou don't have permission to execute this command
+  fly:
+    description: Toggle fly
+    permission: group.godlike
+    permission-message: §cYou don't have permission to execute this command
+
